--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 Copyright 2021
 -->
 <head>
-	<title>An example website</title>
+	<title>A Great website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,11 @@ Copyright 2021
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Super interesante bro
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Jony 2021</p>
 	</footer>
 </body>
 </html>
