--- a/simple.html
+++ b/simple.html
@@ -2,6 +2,8 @@
 <!--
 Copyright 2021
 Lineas para rebase conflict
+Más conflictos
+Rebase
 -->
 <head>
 	<title>Very fun</title>
@@ -18,11 +20,11 @@ Lineas para rebase conflict
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Super interesante bro
+			Nada interesante el conflicto
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Jony 2021</p>
+		<p>&copy; Jony 2020</p>
 	</footer>
 </body>
 </html>
