Nueva modificacion, local, simple.html

--- a/simple.html
+++ b/simple.html
@@ -24,7 +24,7 @@ Rebase
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Jony 2020</p>
+		<p>&copy; 2021 Training</p>
 	</footer>
 </body>
 </html>
