Done simple.html

--- a/simple.html
+++ b/simple.html
@@ -6,7 +6,7 @@ Más conflictos
 Rebase
 -->
 <head>
-	<title>Very fun</title>
+	<title>Very fun 2.0</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
